# autel-msdk-harmonyos

./: README.md  README_en.md
Harmony/: .clang-tidy  CONFIGURATION_GUIDE.md  README.md  README_en.md  (+4 more)
Harmony/entry/src/main/cpp/: AutelSdkMethods.cpp  CMakeLists.txt
Harmony/entry/src/main/cpp/AutelMobileSdk/include/: BaseType.h  CameraBaseType.h  Common.h  CompletionListener.h  DeviceDataType.h  EnumNameConverter.h  ErrorCode.h  FlightMissionBaseType.h  FlightMissionDataType.h  IAIService.h  IAITrack.h  IAirLink.h  IAlbum.h  ICamera.h  ICameraListener.h  ICameraSupport.h  ICompletionListener.h  IControllCompletionListener.h  IDeviceDataListener.h  IDeviceListener.h  IDeviceMng.h  IFileService.h  IFlightControl.h  IFlightMission.h  IFlightParams.h  IGimbal.h  IGroupMeshApi.h  IKeyListener.h  ILte.h  IMapBuilding.h  IMediaPlayer.h  IMediaPlayerFactory.h  IMisc.h  IMissionManager.h  INest.h  IPayload.h  IPerceptionManager.h  IRCDeviceOperator.h  IRtk.h  ISetting.h  (+10 more)
Harmony/entry/src/main/cpp/AutelMobileSdk/include/autelsdk-support/DroneFormation/: CommonDefines.h  CutPolygon.h  DroneFormation.h  DroneFormation_global.h  FormationTypeC.h  Km.h  PathSchedule.h
Harmony/entry/src/main/cpp/AutelMobileSdk/include/data_type/: AIServiceKeyDataType.h  AITrackKeyDataType.h  AccessoriesProxyDataType.h  AirLinkKeyDataType.h  AlbumDataType.h  CameraKeyDataType.h  FlightControlKeyDataType.h  FlightMissionKeyDataType.h  FlightPropertyKeyDataType.h  GimbalKeyDataType.h  KeyValueBaseType.h  MiscDataType.h  MissionKeyDataType.h  NestDataType.h  NetworkingDataType.h  PayloadKeyDataType.h  RtkKeyDataType.h  SwarmKeyDataType.h  UpgradeKeyDataType.h  VisionKeyDataType.h
Harmony/entry/src/main/cpp/AutelMobileSdk/include/key_manager/: IAutelKey.h  IAutelKeyFactory.h  IAutelKeyInfo.h  IKeyManager.h  IMsgConverter.h
Harmony/entry/src/main/cpp/types/libautel_sdk/: Index.d.ts  oh-package.json5
(+43 files in other folders)
